Updated the SkillsSection.tsx to make a parallel request to get both the main skills and the other skills; fixed the SkillCard image size; refactor the SkillSection in the admin page to display both main and other skills admin controls; changed the globals.css to change the scrollbar colors and size

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,8 @@
 @layer base {
     * {
         @apply box-border transition-[background] duration-600;
+        scrollbar-width: thin;
+        scrollbar-color: #283aff #0A1264;
     }
 
     body {
